--- a/style.css
+++ b/style.css
@@ -60,12 +60,13 @@ body{
 }
 .weather h1{
     font-size: 80px;
-    font-weight: 400px;
+    font-weight: 400;
+    margin-top: 50px ;
 
 }   
 .weather h2{
     font-size: 80px;
-    font-weight: 400px;
+    font-weight: 400;
     margin-top: -10px;
 
 }
@@ -79,11 +80,15 @@ body{
 .col{
     display: flex;
     align-items: center;
-    text-align: left;
+    text-align:right;
 
 }
 .col img{
     width: 40px;
     margin-right: 10px;
     
+}
+.humidity , .wind{
+     font-size: 28px;
+     margin-top: -10px;
 }
