.search button{     border: 0;     outline: 0;     background: #ebfffc;     border-radius: 25%;     width:60px;     height: 42px;     cursor: pointer;
}
.search button img{
    width: 16px;

}
.weather-icon{
    width: 170px;
    margin: 30px;

}
.weather h1{
    font-size: 80px;
    font-weight: 400;
    margin-top: 50px ;

}
.weather h2{
    font-size: 80px;
    font-weight: 400;
    margin-top: -10px;

}
.details{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    padding: 0 20px;
    margin-top: 50px;

}
.col{
    width: 500px;
    margin-top: 50px;
    margin-left:100px ;
}
.cool
{
    width:100px;
    margin-top: 1px;
}
.humidity {
    width: 400px;
    margin-left: 120px;
}

.wind {
    width: 100px;
    margin-right: 100px;
}

--- a/style.css
+++ b/style.css
@@ -72,23 +72,29 @@ body{
 }
 .details{
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: space-between;
     padding: 0 20px;
     margin-top: 50px;
+   
 }
 .col{
-    display: flex;
-    align-items: center;
-    text-align:right;
+    width: 500px;
+    margin-top: 50px;
+    margin-left:100px ;
+}
+.cool
+{
+    width:100px;
+    margin-top: 1px;
+}
+.humidity {
+    width: 400px;
+    margin-left: 120px;
+}
 
-}
-.col img{
-    width: 40px;
-    margin-right: 10px;
-    
-}
-.humidity , .wind{
-     font-size: 28px;
-     margin-top: -10px;
+.wind {
+    width: 100px;
+    margin-right: 100px;
 }
