--- a/style.css
+++ b/style.css
@@ -1,100 +1,96 @@
-*{
-    margin:0;
-    padding:0;
-    font-family:'Poppins', sans-serif;
-    box-sizing:border-box
+* {
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins', sans-serif;
+    box-sizing: border-box;
 }
-body{
-    background:#222;
+
+body {
+    background: #222;
 }
-.card{
+
+.card {
     width: 90%;
-    max-width:500px;
-    background: linear-gradient(135deg,#00feba,#5b548a);
+    max-width: 500px;
+    background: linear-gradient(135deg,#352294,#5b548a);
     color: #fff;
     margin: 100px auto 0;
     border-radius: 20px;
     padding: 40px 35px;
     text-align: center;
-
 }
-.search{
+
+.search {
     width: 100%;
-    display:flex;
+    display: flex;
     align-items: center;
     justify-content: space-between;
-
 }
-.search input{
+
+.search input {
     border: 0;
     outline: 0;
     background: #ebfffc;
     color: black;
     padding: 10px 25px;
-    height: 60 px;
+    height: 60px;
     border-radius: 30px;
     flex: 1;
     margin-right: 16px;
-    font-size: 20px;
-
-
+    font-size: 18px;
 }
-.search button{
+
+.search button {
     border: 0;
     outline: 0;
     background: #ebfffc;
-    border-radius: 25%;
-    width:60px;
-    height: 42px;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
     cursor: pointer;
-
 }
-.search button img{
+
+.search button img {
     width: 16px;
-
 }
-.weather-icon{
+
+.weather-icon {
     width: 170px;
-    margin: 30px;
-
+    margin-top: 30px;
 }
-.weather h1{
-    font-size: 80px;
-    font-weight: 400;
-    margin-top: 50px ;
 
-}   
-.weather h2{
+.weather h1 {
     font-size: 80px;
+    font-weight: 500;
+}
+
+.weather h2 {
+    font-size: 45px;
     font-weight: 400;
     margin-top: -10px;
-
 }
-.details{
+
+.details {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 20px;
-    margin-top: 50px;
-   
-}
-.col{
-    width: 500px;
-    margin-top: 50px;
-    margin-left:100px ;
-}
-.cool
-{
-    width:100px;
-    margin-top: 1px;
-}
-.humidity {
-    width: 400px;
-    margin-left: 120px;
+    align-items: flex-start;
+    padding-left: 40px;
+    margin-top: 40px;
+    gap: 20px;
 }
 
-.wind {
-    width: 100px;
-    margin-right: 100px;
+.details div {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.details img {
+    width: 30px;
+    height: 30px;
+}
+
+.humidity, .wind {
+    font-size: 18px;
+    margin: 0;
 }
